Font size increase and general beautification

--- a/notebooks/openml.ipynb
+++ b/notebooks/openml.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "API_KEY = None\n",
-    "TEMP_DIR = 'run_cache'"
+    "TEMP_DIR = './run_cache'"
    ]
   },
   {
