--- a/notebooks/plot_profile.ipynb
+++ b/notebooks/plot_profile.ipynb
@@ -303,7 +303,8 @@
     "data = [\n",
     "    sorted(fairness_profile[l])[::-1] for l in labels_fig\n",
     "]  # counts per performance band\n",
-    "labels_fig = [f'{i:.2f}' for i in labels_fig]  # prettify\n",
+    "_fmt = '{:.4f}' if task_id == 7592 else '{:.2f}'\n",
+    "labels_fig = [_fmt.format(i) for i in labels_fig]  # prettify\n",
     "\n",
     "# get top height\n",
     "bin_numbers = max([len(i) for i in data])\n",
@@ -529,7 +530,7 @@
     "    f.axes[0].xaxis.set_minor_locator(FixedLocator(x_locations_[1::2]))  # odd\n",
     "    f.axes[0].xaxis.set_major_formatter(plt.FuncFormatter(lambda _, loc: labels_fig[0::2][loc]))\n",
     "    f.axes[0].xaxis.set_minor_formatter(plt.FuncFormatter(lambda _, loc: labels_fig[1::2][loc]))  # FormatStrFormatter(\"%d\"))\n",
-    "    f.axes[0].tick_params(which='minor', pad=18, axis='x')\n",
+    "    f.axes[0].tick_params(which='minor', pad=18, axis='x', labelsize=12)\n",
     "    # f.axes[0].xaxis.set_label_text(labels)\n",
     "else:\n",
     "    plt.xticks(x_locations_, labels_fig[:res_])\n",
@@ -733,7 +734,8 @@
     "#     labels=[f'{i:.2f}' for i in metric_values],\n",
     "#     colors=colours)  # y1, y2, y3\n",
     "#\n",
-    "labels_ = [f'{i:.2f}' for i in metric_values]\n",
+    "_fmt = '{:.4f}' if task_id == 7592 else '{:.2f}'\n",
+    "labels_ = [_fmt.format(i) for i in metric_values]\n",
     "heights_ = [y_ticks[i] for i in metric_values]\n",
     "for i in range(y.shape[0]):\n",
     "    # bottom_ = None if i == 0 else y[:i,:].sum(axis=0)\n",
@@ -849,7 +851,8 @@
     "x_loc_f = np.cumsum([y_ticks[i] for i in metric_values])\n",
     "x_lab_f = [f'+{y_ticks[i]}' for i in metric_values]\n",
     "\n",
-    "labels_ = [f'{i:.2f}' for i in metric_values]\n",
+    "_fmt = '{:.4f}' if task_id == 7592 else '{:.2f}'\n",
+    "labels_ = [_fmt.format(i) for i in metric_values]\n",
     "heights_ = [y_ticks[i] for i in metric_values]\n",
     "height_ = 0\n",
     "max_i = sum([len(individual_profile[i]) for i in metric_values])\n",
